[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgewire-anvil"
version = "0.1.0a0"
description = "Local-first planning ledger for human and agentic work"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "ForgeWire Labs" }
]
keywords = [
  "planning",
  "issues",
  "project-management",
  "agents",
  "local-first"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "twine>=5.0"
]

[project.scripts]
anvil = "forgewire_anvil.cli:main"

[project.urls]
Homepage = "https://github.com/ForgeWireLabs/anvil"
Repository = "https://github.com/ForgeWireLabs/anvil"
Changelog = "https://github.com/ForgeWireLabs/anvil/blob/main/CHANGELOG.md"
Issues = "https://github.com/ForgeWireLabs/anvil/issues"
Documentation = "https://github.com/ForgeWireLabs/anvil/blob/main/README.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
forgewire_anvil = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
